# cooking

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  CLAUDE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  commitlint.config.js  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: README.md
docs/architecture/: README.md  adr-001-monorepo-structure.md  philosophy.md
docs/guides/: deployment.md  development.md  project-structure.md  stack-suggestions.md  tech-stack-recommendations.md
docs/learnings/: README.md
docs/prototypes/: tapcard-preview.html
infrastructure/: README.md
projects/: README.md
projects/backend/coding-helper-agent/: .env.example  main.py
shared/: README.md
shared/configs/: README.md  eslint.base.js  prettier.config.js  tsconfig.base.json
templates/: README.md
templates/docker/: Dockerfile  README.md  docker-compose.yml
templates/golang/: .env.example  .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum
templates/nextjs/: .env.example  .eslintrc.json  README.md  next.config.js  package.json  tsconfig.json  vitest.config.ts
templates/nodejs/: .eslintrc.json  README.md  package.json
templates/python/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt
templates/python/app/: main.py
templates/python/tests/: test_health.py
templates/react/: README.md  package.json  vite.config.ts
tools/: README.md
tools/qa-agent/: .env.example  README.md  rules.md  run-qa.md  run.sh
tools/scripts/: create-project.sh
(+115 files in other folders)
